--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1284,13 +1284,6 @@ journal = {Selected Topics in Signal Processing, IEEE Journal of},
 doi = {10.1109/JSTSP.2011.2112333}
 }
 
-@article{fiftyyears,
-  title={Fifty years of signal processing: The ieee signal processing society and its technologies 1948-1998},
-  author={Nebeker, N},
-  journal={The IEEE Signal Processing Society},
-  year={1998}
-}
-
 @inbook{sgd,
 author = {Ketkar, Nikhil},
 year = {2017},
@@ -1427,4 +1420,133 @@ pages = {II-661 },
 title = {Incorporating Phase Information for Source Separation via Spectrogram Factorization},
 volume = {2},
 doi = {10.1109/ICASSP.2007.366322}
+}
+
+@misc{audiocnn2,
+      title={End-to-End Environmental Sound Classification using a 1D Convolutional Neural Network}, 
+      author={Sajjad Abdoli and Patrick Cardinal and Alessandro Lameiras Koerich},
+      year={2019},
+      eprint={1904.08990},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
+
+@inproceedings{bock1,
+author = {B{\"o}ck, Sebastian and Schedl, Markus},
+year = {2011},
+pages = {},
+title = {Enhanced Beat Tracking with Context-Aware Neural Networks},
+booktitle = {Proceedings of the 14th International Conference on Digital Audio Effects, DAFx 2011},
+}
+
+@article{mldspmix,
+author = {Bianco, Michael J. and Gerstoft, Peter and Traer, James and Ozanich, Emma and Roch, Marie A. and Gannot, Sharon  and Deledalle, Charles-Alban},
+title = {Machine learning in acoustics: Theory and applications},
+journal = {The Journal of the Acoustical Society of America},
+volume = {146},
+number = {5},
+pages = {3590-3628},
+year = {2019},
+doi = {10.1121/1.5133944},
+}
+
+@misc{gru1,
+      title={Empirical Evaluation of Gated Recurrent Neural Networks on Sequence Modeling}, 
+      author={Junyoung Chung and Caglar Gulcehre and KyungHyun Cho and Yoshua Bengio},
+      year={2014},
+      eprint={1412.3555},
+      archivePrefix={arXiv},
+      primaryClass={cs.NE}
+}
+
+@article{lstm1,
+author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+year = {1997},
+month = {12},
+pages = {1735-80},
+title = {Long Short-term Memory},
+volume = {9},
+journal = {Neural computation},
+doi = {10.1162/neco.1997.9.8.1735}
+}
+
+@misc{rnnoise,
+      title={A Hybrid DSP/Deep Learning Approach to Real-Time Full-Band Speech Enhancement}, 
+      author={Jean-Marc Valin},
+      year={2018},
+      eprint={1709.08243},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
+
+@article{lstmrnngru,
+author = {Aslam, Muhammad and Lee, Jae-Myeong and Kim, Hyung-Seung and Lee, Seung-Jae and Hong, Sugwon},
+title = {Deep Learning Models for Long-Term Solar Radiation Forecasting Considering Microgrid Installation: A Comparative Study},
+journal = {Energies},
+volume = {13},
+year = {2020},
+number = {1},
+url = {https://www.mdpi.com/1996-1073/13/1/147},
+issn = {1996-1073},
+doi = {10.3390/en13010147}
+}
+
+@misc{birnn,
+      title={Deep Bidirectional and Unidirectional LSTM Recurrent Neural Network for Network-wide Traffic Speed Prediction}, 
+      author={Zhiyong Cui and Ruimin Ke and Ziyuan Pu and Yinhai Wang},
+      year={2019},
+      eprint={1801.02143},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@inproceedings{umxorig1,
+author={Uhlich, Stefan and Porcu, Marcello and Giron, Franck and Enenkl, Michael and Kemp, Thomas and Takahashi, Naoya and Mitsufuji, Yuki},
+booktitle={2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+title={Improving music source separation based on deep neural networks through data augmentation and network blending},
+year={2017},
+pages={261-265},
+doi={10.1109/ICASSP.2017.7952158}}
+
+@article{umxorig2,
+  title={Framewise phoneme classification with bidirectional LSTM and other neural network architectures},
+  author={A. Graves and J. Schmidhuber},
+  journal={Neural networks : the official journal of the International Neural Network Society},
+  year={2005},
+  volume={18 5-6},
+  pages={602-10},
+}
+
+@inproceedings{tcn,
+author={Pandey, Ashutosh and Wang, DeLiang},
+booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+title={TCNN: Temporal Convolutional Neural Network for Real-time Speech Enhancement in the Time Domain},
+year={2019},
+pages={6875-6879},
+doi={10.1109/ICASSP.2019.8683634}
+}
+
+@techreport{2dconv,
+author = {Fedorishin, Dennis and Sankaran, Nishant and Mohan, Deen and Birgiolas, Justas and Schneider, Philip and Setlur, Srirangaraj, and Govindaraju, Venu},
+title = {Investigating Waveform and Spectrogram Feature Fusion for Acoustic Scene Classification},
+year = {2021},
+institution = {Detection and Classification of Acoustic Scenes and Events 2021},
+url = {http://dcase.community/documents/challenge2021/technical_reports/DCASE2021_Fedorishin_97_t1.pdf}
+}
+
+@inproceedings{nussl,
+author = {Ethan Manilow and Prem Seetharaman and Bryan Pardo},
+title = {The Northwestern University Source Separation Library},
+publisher = {Proceedings of the 19th International Society of Music Information Retrieval Conference ({ISMIR} 2018), Paris, France, September 23-27},
+year = {2018}
+}
+
+@inproceedings{asteroid,
+    title={Asteroid: the {PyTorch}-based audio source separation toolkit for researchers},
+    author={Manuel Pariente and Samuele Cornell and Joris Cosentino and Sunit Sivasankaran and
+            Efthymios Tzinis and Jens Heitkaemper and Michel Olvera and Fabian-Robert Stöter and
+            Mathieu Hu and Juan M. Martín-Doñas and David Ditter and Ariel Frank and Antoine Deleforge
+            and Emmanuel Vincent},
+    year={2020},
+    booktitle={Proc. Interspeech},
 }
