Some good tweaks

--- a/latex/ch1_introduction.tex
+++ b/latex/ch1_introduction.tex
@@ -42,9 +42,9 @@ The constant-Q transform was originally proposed by \textcite{jbrown} to analyze
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[Linear-frequency DFT]{\includegraphics[height=5.2cm]{./violindft.png}}
+	\subfloat[Linear-frequency DFT]{\includegraphics[height=5.2cm]{./images-tftheory/violindft.png}}
 	\hspace{0.5em}
-	\subfloat[Constant-Q transform]{\includegraphics[height=5.5cm]{./violincqt.png}}
+	\subfloat[Constant-Q transform]{\includegraphics[height=5.5cm]{./images-tftheory/violincqt.png}}
 	\caption{Violin playing the diatonic scale, $G_{3} \text{(196Hz)} - G_{5} \text{(784Hz)}$\cite{jbrown}}
 	\label{fig:violin}
 \end{figure}
@@ -76,6 +76,6 @@ The second contribution of this thesis is the adaptation of the reference Open-U
 
 \subsection{Outline}
 
-This thesis is organized as follows. Chapter 2 covers the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier transform, STFT, CQT, NSGT, and sliCQ transforms. It also covers the different interesting musical and psychoacoustic frequency scales, the task of music demixing, and related machine and deep learning approaches. Chapter 3 describes the methodology for the two objectives of the thesis -- the PyTorch adaptation of the NSGT and sliCQ library, and the replacement of the STFT with the sliCQ transform inside Open-Unmix. Chapter 4 shows the experiments and results, and chapter 5 discusses the results and concludes the thesis.
+This thesis is organized as follows. Chapter 2 covers the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier transform, STFT, CQT, NSGT, and sliCQ transforms. It also presents an overview of machine learning for audio and music signals and a survey on the task of music demixing. Chapter 3 describes the methodology for the two objectives of the thesis -- the PyTorch adaptation of the NSGT and sliCQ library, and the replacement of the STFT with the sliCQ transform inside Open-Unmix. Chapter 4 shows the experiments and results, and chapter 5 discusses the results and concludes the thesis.
 
 \end{document}
