Tweaks for chapter todos

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1550,3 +1550,10 @@ year = {2018}
     year={2020},
     booktitle={Proc. Interspeech},
 }
+
+@article{fiftyyears,
+  title={Fifty years of signal processing: The ieee signal processing society and its technologies 1948-1998},
+  author={Nebeker, N},
+  journal={The IEEE Signal Processing Society},
+  year={1998}
+}
