Start planning ch3

--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -746,6 +746,7 @@ To estimate the time domain waveform from an oracle mask, the complex STFT of th
 \newpagefill
 
 \subsubsection{Open-Unmix (UMX) and CrossNet-Open-Unmix (X-UMX)}
+\label{sec:umx}
 
 Open-Unmix (UMX) was created by \textcite{umx} as an open-source, reference implementation of a state-of-the-art deep neural network for music source separation. Open-Unmix is based on STFT masking, and is intended to foster reproducible research by only using the open MUSDB18 dataset for training data (\cite{musdb18, musdb18hq}).
 
