--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -4,19 +4,34 @@
 \section{Methodology}
 
 \chaptertodo{
-sigsep-mus-eval optimization in oracle section\\
-Describe open-unmix-pytorch (LSTM vs. gh template)\\
 Summarize CDAE papers (should be simple)\\
+slice length and freq scales section goes to the parameter search\\
+as does museval: sigsep-mus-eval optimization in oracle section\\
 }
-\subsection{Hypothesis}
+
+\subsection{Hypothesis and objectives}
 
 The proposed adaptation of Open-Unmix (UMX) (\cite{umx}) to use the sliCQ Transform (sliCQT) (\cite{invertiblecqt, slicq}) was named xumx-sliCQ, and is the subject and main result of this thesis. The following methodology section will cover how xumx-sliCQ was written step-by-step.
 
 Manipulating time-frequency resolution is one strategy for improving spectral music source separation. Open-Unmix uses a fixed time-frequency resolution from the STFT with a window size of 4096. \textcite{fitzgerald1, driedger} use multiple STFTs with different window sizes, and \textcite{fitzgerald2, cqtseparation, bettermusicsep} replaced the STFT with the constant-Q transform.
 
-Open-Unmix is a deep neural network which uses the STFT to estimate 4 targets: bass, vocals, drums, and other. It is the hypothesis and hope of this thesis that using a sliCQT spectrogram, which can contain more musical information than the STFT from its adaptive time-frequency resolution, will allow the Open-Unmix network to perform music demixing more effectively.
+Open-Unmix (UMX) is a deep neural network which uses a bi-directional LSTM network to estimate the magnitude STFTs for 4 targets: bass, vocals, drums, and other. It is the hypothesis of this thesis that using a sliCQT spectrogram, which can contain more musical information than the STFT from its adaptive time-frequency resolution, will allow the Open-Unmix network to perform music demixing more effectively.
+
+Open-Unmix is a published academic paper (\cite{umx}), but it can also be considered an open-source framework for music demixing. The project on GitHub\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} uses PyTorch (\cite{pytorch}), a GPU-capable deep learning and numerical computation library for Python. It also conveniently includes a MUSDB18-HQ data loader (\cite{musdb18hq}) and BSS metrics evaluator (\cite{bss}), which are the dataset and evaluation metrics for music demixing being considered in this thesis.
+
+xumx-sliCQ will be based on this template, and as a result, all of the code developed will be in Python and with PyTorch code targeting the GPU. The rest of this section will be focused on the Python and PyTorch implementation details of xumx-sliCQ. There are three requirements to make the thesis objective possible:
+
+\begin{tight_enumerate}
+	\item
+		PyTorch implementation of the sliCQT, in section \ref{sec:torchslicq}
+	\item
+		Parameter selection for the sliCQT, in section \ref{sec:slicqparamsrch}
+	\item
+		Use the sliCQT in Open-Unmix, in section \ref{sec:slicqumx}
+\end{tight_enumerate}
 
 \subsection{PyTorch NSGT and sliCQT}
+\label{sec:torchslicq}
 
 The starting point for the sliCQ transform used in this paper is the Python reference library\footnote{\url{https://github.com/grrrr/nsgt}} for the NSGT (\cite{slicq}) and sliCQ transform. It was forked to my own GitHub profile,\footnote{\url{https://github.com/sevagh/nsgt}} where modifications were made to support its use in GPU deep learning, and to add some extra features such as new frequency scales.
 
@@ -79,6 +94,7 @@ In my fork of the NSGT library, two additional frequency scales were added:
 \todo[inline]{call it the ragged transform}
 
 \subsection{Choosing sliCQ parameters with oracle estimators}
+\label{sec:slicqparamsrch}
 
 The first experiment to run is to discover which configuration of the NSGT has the potential to surpass the maximum performance of time-frequency masking using the STFT spectrogram. This should indicate whether substituting the NSGT in Open-Unmix is worthwhile.
 
@@ -139,6 +155,7 @@ The min and max of 12--192 bins-per-octave therefore corresponds to the total nu
 \textcite{randomgrid} know what they're talking about
 
 \subsection{Open-Unmix with the sliCQ transform}
+\label{sec:slicqumx}
 
 \todo[inline]{incorporate my sparsity hypothesis/justification for nsgt}
 
